[gd_scene load_steps=12 format=3 uid="uid://12da8b2cj75y"]

[ext_resource type="Script" uid="uid://chb6awiha1tkj" path="res://Code/Player/player.gd" id="1_ghbgx"]
[ext_resource type="SpriteFrames" uid="uid://cmghp7omvfh8l" path="res://Resources/player_spriteframes.tres" id="2_pfyfq"]
[ext_resource type="Script" uid="uid://bf2uohhhqy5hj" path="res://Code/Player/camera.gd" id="3_0hbm2"]
[ext_resource type="Texture2D" uid="uid://d1qluayhm881e" path="res://Sprites/Player/Mr.Cursor_Soul.png" id="5_24x1j"]
[ext_resource type="Script" uid="uid://dfo70dasqdyjj" path="res://Code/Player/player_cur.gd" id="6_hus1f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ud2vl"]
size = Vector2(12, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hbm2"]
size = Vector2(14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s7id"]
atlas = ExtResource("5_24x1j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lth0"]
atlas = ExtResource("5_24x1j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hvdf1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s7id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lth0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s7id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s7id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s7id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s7id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s7id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s7id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s7id")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tfviv"]
radius = 5.0

[node name="player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_ghbgx")

[node name="player_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_pfyfq")
animation = &"idle"

[node name="player_col" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_ud2vl")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("3_0hbm2")

[node name="player_hurtbox" type="Area2D" parent="."]

[node name="hurtbox_col" type="CollisionShape2D" parent="player_hurtbox"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_0hbm2")
debug_color = Color(0.741476, 0.465618, 0, 0.42)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)

[node name="player_cur" type="Node2D" parent="CanvasLayer"]
position = Vector2(-160, -104)
script = ExtResource("6_hus1f")

[node name="cur_soul_sprite" type="AnimatedSprite2D" parent="CanvasLayer/player_cur"]
position = Vector2(16, 16)
sprite_frames = SubResource("SpriteFrames_hvdf1")
frame_progress = 0.874455

[node name="cur_interaction_area" type="Area2D" parent="CanvasLayer/player_cur"]

[node name="cur_interaction_col" type="CollisionShape2D" parent="CanvasLayer/player_cur/cur_interaction_area"]
position = Vector2(5, 11)
shape = SubResource("CircleShape2D_tfviv")

[node name="debug" type="Node2D" parent="."]
visible = false

[node name="Label" type="Label" parent="debug"]
offset_left = -20.0
offset_top = -39.0
offset_right = 20.0
offset_bottom = -16.0

[connection signal="body_entered" from="CanvasLayer/player_cur/cur_interaction_area" to="." method="_on_cur_interaction_area_body_entered"]
